--- a/force-app/main/default/lwc/thirdPartyJsFiles/thirdPartyJsFiles.html
+++ b/force-app/main/default/lwc/thirdPartyJsFiles/thirdPartyJsFiles.html
@@ -2,6 +2,7 @@
     <lightning-card title="Third Party Js Files">
       <p>
         <strong>Current Date</strong> : {currentDate}
+        <p>Harshad</p>
       </p> 
 
       <lightning-button label="Toggle" variant="brand" onclick={handleClick}>
